==> ARMmbed/mbed-os/targets/TARGET_Infineon/TARGET_XMC4XXX/serial_api.c <==
#include "mbed_assert.h"
#include "serial_api.h"
#include "cmsis.h"
#include "pinmap.h"
#include "PeripheralPins.h"
#include "xmc_gpio.h"
#include "xmc_uart.h"
#include "xmc4_helper.h"
#define UART_NUM 6
#define UART_NUM 4
#define UART_NUM 2

static void uart_irq(XMC_USIC_CH_t *const channel, uint32_t index) {

    /* Check if interrupt is in registry */
    if (serial_irq_ids[index] != 0) {
        /* Get UART status flag */
        uint32_t status = XMC_UART_CH_GetStatusFlag(channel);
        /* Check if receive or transmit interrupt */
        if((status & XMC_UART_CH_STATUS_FLAG_RECEIVE_INDICATION) ||
                (status & XMC_UART_CH_STATUS_FLAG_ALTERNATIVE_RECEIVE_INDICATION)) {
            /* Rx Interrupt */
            irq_handler(serial_irq_ids[index], RxIrq);
        } else if(status & XMC_UART_CH_STATUS_FLAG_TRANSMIT_BUFFER_INDICATION ) {
            /* Tx Interrupt */
            irq_handler(serial_irq_ids[index], TxIrq);
        }
    }
}

void uart0_irq(void) {

    uart_irq((XMC_USIC_CH_t *)UART_0, 0);
}

void uart1_irq(void) {

    uart_irq((XMC_USIC_CH_t *)UART_1, 1);
}

void uart2_irq(void) {

    uart_irq((XMC_USIC_CH_t *)UART_2, 2);
}

void uart3_irq(void) {

    uart_irq((XMC_USIC_CH_t *)UART_3, 3);
}

void uart4_irq(void) {

    uart_irq((XMC_USIC_CH_t *)UART_4, 4);
}

void uart5_irq(void) {

    uart_irq((XMC_USIC_CH_t *)UART_5, 5);
}

void serial_init(serial_t *obj, PinName tx, PinName rx) {

    /* Determine corresponding USIC module & channel */
    UARTName uart_tx = (UARTName)pinmap_peripheral(tx, PinMap_UART_TX);
    UARTName uart_rx = (UARTName)pinmap_peripheral(rx, PinMap_UART_RX);
    UARTName uart = (UARTName)pinmap_merge(uart_tx, uart_rx);
    /* Check if both pins are a possible UART pair */
    MBED_ASSERT((int)uart != NC);

    /* Get TX pin alternative function */
    uint8_t tx_function = (uint8_t)pinmap_function(tx, PinMap_UART_TX);

    /* CFG for TX Pin */
    XMC_GPIO_CONFIG_t uart_tx_cfg =
        {
            .mode = XMC_GPIO_MODE_OUTPUT_PUSH_PULL | (tx_function << PORT0_IOCR0_PC0_Pos),
            .output_strength = XMC_GPIO_OUTPUT_STRENGTH_MEDIUM
        };
    /* CFG for RX Pin */
    XMC_GPIO_CONFIG_t uart_rx_cfg =
        {
            .mode = XMC_GPIO_MODE_INPUT_TRISTATE
        };

    /* Set default UART configuration */
    XMC_UART_CH_CONFIG_t uart_config =
        {
            .data_bits = 8U,
            .stop_bits = 1U,
            .baudrate = 9600U
        };

    /* Get USIC BASE address */
    XMC_USIC_CH_t *channel = ((XMC_USIC_CH_t *)uart);
    obj->channel = channel;
    /* Get RX pin function */
    pin_io_function_t *rx_function = get_pin_function(rx);

    /* Set UART index */
    switch ((int)obj->channel) {
        case UART_0:
            obj->index = 0;
            obj->dx0 = rx_function->usic0_ch0_dx0;
            break;
        case UART_1:
            obj->index = 1;
            obj->dx0 = rx_function->usic0_ch1_dx0;
            break;
#ifdef USIC1

        case UART_2:
            obj->index = 2;
            obj->dx0 = rx_function->usic1_ch0_dx0;
            break;
        case UART_3:
            obj->index = 3;
            obj->dx0 = rx_function->usic1_ch1_dx0;
            break;
#endif
#ifdef USIC2

        case UART_4:
            obj->index = 4;
            obj->dx0 = rx_function->usic2_ch0_dx0;
            break;
        case UART_5:
            obj->index = 5;
            obj->dx0 = rx_function->usic2_ch1_dx0;
            break;
#endif

    }

    /* Get Port Base address */
    XMC_GPIO_PORT_t *port_tx = (XMC_GPIO_PORT_t *)XMC4_GET_PORT_BASE_FROM_NAME(tx);
    XMC_GPIO_PORT_t *port_rx = (XMC_GPIO_PORT_t *)XMC4_GET_PORT_BASE_FROM_NAME(rx);

    /* Initialize UART Channel */
    XMC_UART_CH_Init(channel, &uart_config);
    XMC_UART_CH_SetInputSource(channel, XMC_UART_CH_INPUT_RXD, obj->dx0);
    XMC_UART_CH_Start(channel);
    XMC_GPIO_Init(port_tx, XMC4_GET_PIN_NBR_FROM_NAME(tx), &uart_tx_cfg);
    XMC_GPIO_Init(port_rx, XMC4_GET_PIN_NBR_FROM_NAME(rx), &uart_rx_cfg);

    if (uart == STDIO_UART) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }
}

void serial_baud(serial_t *obj, int baudrate) {

    XMC_UART_CH_SetBaudrate(obj->channel, baudrate, 16);
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits) {

    XMC_UART_CH_CONFIG_t uart_config;

    /* Set parity mode */
    switch(parity) {
        case ParityNone:
            uart_config.parity_mode = XMC_USIC_CH_PARITY_MODE_NONE;
            break;
        case ParityOdd:
            uart_config.parity_mode = XMC_USIC_CH_PARITY_MODE_EVEN;
            break;
        case ParityEven:
            uart_config.parity_mode = XMC_USIC_CH_PARITY_MODE_ODD;
            break;
        default:
            uart_config.parity_mode = XMC_USIC_CH_PARITY_MODE_NONE;
            break;
    }

    /* Set data bits */
    uart_config.data_bits = data_bits;
    /* Set stop bits */
    uart_config.stop_bits = stop_bits;

    /* Stop UART Channel */
    XMC_UART_CH_Stop(obj->channel);
    /* Initialize & start UART Channel */
    XMC_UART_CH_Init(obj->channel, &uart_config);
    XMC_UART_CH_SetInputSource(obj->channel, XMC_UART_CH_INPUT_RXD, obj->dx0);
    XMC_UART_CH_Start(obj->channel);
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable) {

    IRQn_Type irq_n = (IRQn_Type)0;			///> interrupt number
    uint32_t vector = 0;					///> interrupt vector
    uint32_t service_request_nbr = 0;		///> interrupt request line (0-5)

    /* Set interrupt variables for the specific UART channel */
    switch ((int)obj->channel) {
        case UART_0:
            irq_n = USIC0_0_IRQn;
            service_request_nbr = 0;
            vector = (uint32_t)&uart0_irq;
            break;
        case UART_1:
            irq_n = USIC0_1_IRQn;
            service_request_nbr = 1;
            vector = (uint32_t)&uart1_irq;
            break;
#ifdef USIC1

        case UART_2:
            irq_n = USIC1_0_IRQn;
            service_request_nbr = 0;
            vector = (uint32_t)&uart2_irq;
            break;
        case UART_3:
            irq_n = USIC1_1_IRQn;
            service_request_nbr = 1;
            vector = (uint32_t)&uart3_irq;
            break;
#endif
#ifdef USIC2

        case UART_4:
            irq_n = USIC2_0_IRQn;
            service_request_nbr = 0;
            vector = (uint32_t)&uart4_irq;
            break;
        case UART_5:
            irq_n = USIC2_1_IRQn;
            service_request_nbr = 1;
            vector = (uint32_t)&uart5_irq;
            break;
#endif

    }

    /* Enable specific UART interrupt */
    if (enable) {
        switch (irq) {
            case RxIrq:
                /* Enable receive events */
                XMC_UART_CH_EnableEvent(obj->channel, XMC_UART_CH_EVENT_STANDARD_RECEIVE);
                XMC_UART_CH_EnableEvent(obj->channel, XMC_UART_CH_EVENT_ALTERNATIVE_RECEIVE);
                break;
            case TxIrq:
                /* Enable transmit events */
                XMC_UART_CH_EnableEvent(obj->channel, XMC_UART_CH_EVENT_TRANSMIT_BUFFER);
                break;
        }
        /* Set interrupt node pointer */
        XMC_USIC_CH_SetInterruptNodePointer(obj->channel, XMC_USIC_CH_INTERRUPT_NODE_POINTER_RECEIVE, service_request_nbr);
        XMC_USIC_CH_SetInterruptNodePointer(obj->channel, XMC_USIC_CH_INTERRUPT_NODE_POINTER_ALTERNATE_RECEIVE, service_request_nbr);
        /* Set NVIC vector and enable interrupt */
        NVIC_SetVector(irq_n, vector);
        NVIC_EnableIRQ(irq_n);
    } else { /* Disable specific UART interrupt */
        switch (irq) {
            case RxIrq:
                /* Disable receive events */
                XMC_UART_CH_DisableEvent(obj->channel, XMC_UART_CH_EVENT_STANDARD_RECEIVE);
                XMC_UART_CH_DisableEvent(obj->channel, XMC_UART_CH_EVENT_ALTERNATIVE_RECEIVE);
                break;
            case TxIrq:
                /* Disable transmit events */
                XMC_UART_CH_DisableEvent(obj->channel, XMC_UART_CH_EVENT_TRANSMIT_BUFFER);
                break;
        }
        /* NVIC disable interrupt */
        NVIC_DisableIRQ(irq_n);
    }
}

int  serial_readable(serial_t *obj) {

    /* Get UART channel status */
    uint32_t status = XMC_UART_CH_GetStatusFlag(obj->channel);
    if((status & XMC_UART_CH_STATUS_FLAG_RECEIVE_INDICATION) ||
            (status & XMC_UART_CH_STATUS_FLAG_ALTERNATIVE_RECEIVE_INDICATION)) {

        /* Clear status flag */
        XMC_UART_CH_ClearStatusFlag(obj->channel, XMC_UART_CH_STATUS_FLAG_RECEIVE_INDICATION | XMC_UART_CH_STATUS_FLAG_ALTERNATIVE_RECEIVE_INDICATION);
        /* Read data available */
        return 1;
    }
    /* No Read data available */
    return 0;
}

int  serial_writable(serial_t *obj) {

    /* Get UART channel status */
    uint32_t status = XMC_UART_CH_GetStatusFlag(obj->channel);
    if(status == XMC_UART_CH_STATUS_FLAG_TRANSMISSION_IDLE ) {
        /* UART is in idle state */
        return 1;
    }
    /* UART is busy */
    return 0;
}

void serial_pinout_tx(PinName tx) {

    /* Get TX pin alternative function */
    uint8_t tx_function = (uint8_t)pinmap_function(tx, PinMap_UART_TX);
    /* CFG for TX Pin */
    XMC_GPIO_CONFIG_t uart_tx_cfg =
        {
            .mode = XMC_GPIO_MODE_OUTPUT_PUSH_PULL | (tx_function << PORT0_IOCR0_PC0_Pos),
            .output_strength = XMC_GPIO_OUTPUT_STRENGTH_MEDIUM
        };

    /* Get Port Base address */
    XMC_GPIO_PORT_t *port_tx = (XMC_GPIO_PORT_t *)XMC4_GET_PORT_BASE_FROM_NAME(tx);
    /* Initialize Tx Pin */
    XMC_GPIO_Init(port_tx, XMC4_GET_PIN_NBR_FROM_NAME(tx), &uart_tx_cfg);
}
